--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -90,3 +90,5 @@
 @import 'ui/dropdown-select-button';
 @import 'ui/_ci-check-list-item';
 @import 'ui/_ci-check-list';
+@import 'ui/_ci-check-dialog-list-item';
+@import 'ui/_ci-check-dialog';
