--- a/app/styles/ui/_dialog.scss
+++ b/app/styles/ui/_dialog.scss
@@ -428,6 +428,11 @@ dialog {
     width: 400px;
   }
 
+  &#pull-request-checks-failed {
+    max-width: none;
+    width: 910px;
+  }
+
   &#workflow-push-rejected {
     .ref-component {
       display: inline-block;
